--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
+  "type": "module",
+  "module": "CommonJS",
+  "bin": {
+    "gendiff": "./bin/gendiff.js"
+  },
   "description": "sulianova hexlet project 2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "babel-node": "babel-node",
+    "eslint": "eslint",
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -15,10 +22,18 @@
   "bugs": {
     "url": "https://github.com/sulianova/frontend-project-46/issues"
   },
+  "jest": {
+    "collectCoverage": true
+  },
   "homepage": "https://github.com/sulianova/frontend-project-46#readme",
   "devDependencies": {
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.6",
+    "jest": "^29.3.1"
+  },
+  "dependencies": {
+    "commander": "^9.4.1"
   }
 }
