--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     
     strategy:
-      matrix: [16.x]
+      matrix:
+        node-version: [16.x]
 
     steps:
       - uses: actions/checkout@v2
